--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,12 @@ img {max-width: 100%;} /* imagens responsivas */
 .menu li {padding: 1.5%;}
 .menu li a {font-size: 2em; color: #fff; padding: 1.5% 3%;}
 .menu li a:hover {border: 1px solid #da6709;}
+/* BANNER */
+.banner {width: 100%; float: left; text-align: center; padding: 3% 4%; background: url(../img/bg.jpg) no-repeat fixed;}
+.title {width: 100%;}
+.title h2 {font-size: 2.5em; color: #fff; font-weight: 700;}
+.title h3 {font-size: 1.5em; color: #fff;}
+.buttons {width: 100%; margin-top: 2%;}
+.buttons i {float: right;}
+.btn-cadastrar {width: 100%; font-size: 1.5em; text-align: left; cursor: pointer; padding: 5%; border-radius: 10px; background-color: #fff; color: #130400;}
+.btn-sobre {width: 100%; font-size: 1.5em; text-align: left; cursor: pointer; padding: 5%; border-radius: 10px; background-color: #130400; color: #fff; margin-top: 2%;}
