--- a/css/style.css
+++ b/css/style.css
@@ -37,23 +37,45 @@ img {max-width: 100%;} /* imagens responsivas */
 .servico {width: 100%; text-align: left; margin-bottom: 3%;}
 .servico img { border-radius: 7px 7px 0 0; }
 .inner {padding: 7%;}
-.inner a {font-size: 1.2em; color: #130400; font-weight: 700; }
-.inner h4 {font-size: 1.2em, color: #130400, margin-top: 2px; }
+.inner a {font-size: 1.5em; color: #130400; font-weight: 700; }
+.inner h4 {font-size: 1.2em, color: #130400; margin-top: 2%; }
 .inner p {margin-top: 6%; color: #130400; line-height: 1.5em; }
 /* NEWSLETTER */
 .newsletter h2 {font-size: 1.5em; color: #fff; font-weight: 700;}
-.newsletter h3 { color: #fff;}
+.newsletter h3 {color: #fff;}
 .newsletter form {margin-top: 2%;}
 .newsletter input {width: 100%; border: 1px solid rgba(255, 255, 255, 0.3); padding: 5%;}
-.newsletter button {width: 100%; color: #130400; padding: 5%; cursor: pointer; margin-top: 5%;}
+.newsletter button {width: 100%; color: #130400; padding: 5%; cursor: pointer; margin-top: 2%;}
 /* RODAPÉ */
 .social-icons a { font-size: 1.5em; color: rgba(255,255,255,0.7); margin-right: 3%;}
 .social-icons a:last-child {margin-right: 0;}
 .social-icons a:hover {color: rgb(255,255,255);}
-.copyright {margin-top: 2%; color: rgba(255,255,255,0.7);}
+.copyright {color: rgba(255,255,255,0.7); margin-top: 2%;}
 
 /* =================== MOBILE FIRST ======================*/
+/* SMALL DEVICES - SMARTPHONES */
 @media screen and (min-width: 480px) {
 .logo {width: 214px; background: url(../img/logo.png) center center/214px no-repeat;}
 .btn {font-size: 2em;}
+}
+/* SMALL DEVICES - TABLETS */
+@media screen and (min-width: 768px) {
+.servico {width: 49%; float: left; margin-right: 2%;}
+.servico:nth-child(2){margin-right: 0;}
+.newsletter h2 {font-size: 2em;}
+.newsletter h3 {font-size: 1.5em;}
+.newsletter input {width: 70%; padding: 2%; float: left; margin-right: 1%;}
+.newsletter button {width: 29%; padding: 2%; float: right; margin-top: 0;}
+}
+/* MEDIUM DEVICES - TABLETS & DESKTOP */
+@media screen and (min-width: 960px) {
+.title {width: 70%; float: left; text-align: left;}
+.title h2 {font-size: 3em;}
+.title h3 {font-size: 2em;}
+.buttons {width: 30%; float: right; margin-top: 0;}
+.servico {width: 32%;}
+.servico:nth-child(2){margin-right: 2%;}
+.servico:nth-child(3){margin-right: 0;}
+.newsletter input {width: 60%; float:none;}
+.newsletter button {width: 20%; float:none;}
 }
